--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     place-items: center;
     height:100vh;
     margin: 0;
+    background-color: rgba(28, 27, 27, 0.964);
   }
   
   :root{
@@ -14,7 +15,7 @@ body {
     --second-animation-start: calc(var(--first-animation-delay) + var(--first-animation-duration) + 1s);
   }
   .parent {
-    background-color: aquamarine;
+    background-color: rgb(25, 23, 23);
     width: 10rem;
     aspect-ratio: 1;
     border-radius: 50%;
@@ -239,7 +240,7 @@ body {
     aspect-ratio: 1;
     border-radius: 50%;
     display: grid;
-    background-color: rgb(94, 188, 188);
+    background-color: rgb(62, 69, 69);
     place-items: center;
     cursor: pointer;
     animation: throb 2s linear 3s infinite alternate;
